[package]
name = "rust-surreal-import"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[dependencies]
surrealdb = "1.0.0"                                # SurrealDB client
tokio = { version = "1", features = ["full"] }      # Async runtime
serde = { version = "1.0", features = ["derive"] }  # Serialization/Deserialization framework
serde_json = "1.0"                                 # JSON handling
futures = "0.3"                                    # Async utilities
thiserror = "1.0"                                  # Error handling helper
tracing = "0.1"                                    # Logging facade (structured)
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] } # Logging implementation
tokio-retry = "0.3"                                # Added for retry logic

# Optional: Add 'clap' for command-line argument parsing
# clap = { version = "4.0", features = ["derive"] }
